Update example and link from README

--- a/examples/query_chem.ipynb
+++ b/examples/query_chem.ipynb
@@ -16,7 +16,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Query project-specific water chemistry data using the Aquamonitor API from R"
+    "# Query project-specific water chemistry data using the Aquamonitor API from R\n",
+    "\n",
+    "`aquamonitR` is a translation of [Aquamonitor-Python](https://github.com/NIVANorge/Aquamonitor-Python) to R."
    ]
   },
   {
