Parse dates; tidy columns

--- a/examples/query_chem.ipynb
+++ b/examples/query_chem.ipynb
@@ -299,47 +299,47 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<caption>A data.frame: 6 × 18</caption>\n",
+       "<caption>A data.frame: 6 × 13</caption>\n",
        "<thead>\n",
-       "\t<tr><th></th><th scope=col>ProjectId</th><th scope=col>ProjectName</th><th scope=col>StationId</th><th scope=col>StationCode</th><th scope=col>StationName</th><th scope=col>SampleDate</th><th scope=col>Depth2</th><th scope=col>ParameterName</th><th scope=col>Flag</th><th scope=col>Value</th><th scope=col>Unit</th><th scope=col>Approved</th><th scope=col>QuantificationLimit</th><th scope=col>DetectionLimit</th><th scope=col>Laboratory</th><th scope=col>MethodCode</th><th scope=col>MethodRef</th><th scope=col>Remark</th></tr>\n",
-       "\t<tr><th></th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "\t<tr><th></th><th scope=col>ProjectId</th><th scope=col>ProjectName</th><th scope=col>StationId</th><th scope=col>StationCode</th><th scope=col>StationName</th><th scope=col>SampleDate</th><th scope=col>Depth1</th><th scope=col>Depth2</th><th scope=col>ParameterName</th><th scope=col>Flag</th><th scope=col>Value</th><th scope=col>Unit</th><th scope=col>Approved</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dttm&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;lgl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>1</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>71725</td><td>1432-2-205</td><td><span style=white-space:pre-wrap>Femtevatnet     </span></td><td>2019-10-02T00:00:00Z</td><td>NA</td><td>Aluminium, ikke labil</td><td>&lt; </td><td> 5</td><td>UG_P_L</td><td>TRUE</td><td>5</td><td>1.5</td><td>NIVA_LABWARE</td><td>NA</td><td>E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009</td><td>NA</td></tr>\n",
-       "\t<tr><th scope=row>2</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>71719</td><td>623-603   </td><td>Breidlivatnet   </td><td>2019-10-28T00:00:00Z</td><td>NA</td><td>Aluminium, ikke labil</td><td>NA</td><td>97</td><td>UG_P_L</td><td>TRUE</td><td>5</td><td>1.5</td><td>NIVA_LABWARE</td><td>NA</td><td>E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009</td><td>NA</td></tr>\n",
-       "\t<tr><th scope=row>3</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>45862</td><td>1037-19   </td><td>Fjotlandsvatnet </td><td>2019-10-30T00:00:00Z</td><td>NA</td><td>Aluminium, ikke labil</td><td>NA</td><td>98</td><td>UG_P_L</td><td>TRUE</td><td>5</td><td>1.5</td><td>NIVA_LABWARE</td><td>NA</td><td>E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009</td><td>NA</td></tr>\n",
-       "\t<tr><th scope=row>4</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>37922</td><td>1622-1-5  </td><td>Nedre Hanstjørna</td><td>2019-10-09T00:00:00Z</td><td>NA</td><td>Aluminium, ikke labil</td><td>NA</td><td>84</td><td>UG_P_L</td><td>TRUE</td><td>5</td><td>1.5</td><td>NIVA_LABWARE</td><td>NA</td><td>E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009</td><td>NA</td></tr>\n",
-       "\t<tr><th scope=row>5</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>27063</td><td>1811-1-22 </td><td>HOH 674         </td><td>2019-09-26T00:00:00Z</td><td>NA</td><td>Aluminium, ikke labil</td><td>NA</td><td> 7</td><td>UG_P_L</td><td>TRUE</td><td>5</td><td>1.5</td><td>NIVA_LABWARE</td><td>NA</td><td>E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009</td><td>NA</td></tr>\n",
-       "\t<tr><th scope=row>6</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>27056</td><td>1266-2-11 </td><td>Harekupvatnet   </td><td>2019-10-17T00:00:00Z</td><td>NA</td><td>Aluminium, ikke labil</td><td>NA</td><td> 7</td><td>UG_P_L</td><td>TRUE</td><td>5</td><td>1.5</td><td>NIVA_LABWARE</td><td>NA</td><td>E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009</td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>1</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>71725</td><td>1432-2-205</td><td><span style=white-space:pre-wrap>Femtevatnet     </span></td><td>2019-10-02</td><td>NA</td><td>NA</td><td>Aluminium, ikke labil</td><td>&lt; </td><td> 5</td><td>UG_P_L</td><td>TRUE</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>71719</td><td>623-603   </td><td>Breidlivatnet   </td><td>2019-10-28</td><td>NA</td><td>NA</td><td>Aluminium, ikke labil</td><td>NA</td><td>97</td><td>UG_P_L</td><td>TRUE</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>45862</td><td>1037-19   </td><td>Fjotlandsvatnet </td><td>2019-10-30</td><td>NA</td><td>NA</td><td>Aluminium, ikke labil</td><td>NA</td><td>98</td><td>UG_P_L</td><td>TRUE</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>37922</td><td>1622-1-5  </td><td>Nedre Hanstjørna</td><td>2019-10-09</td><td>NA</td><td>NA</td><td>Aluminium, ikke labil</td><td>NA</td><td>84</td><td>UG_P_L</td><td>TRUE</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>27063</td><td>1811-1-22 </td><td>HOH 674         </td><td>2019-09-26</td><td>NA</td><td>NA</td><td>Aluminium, ikke labil</td><td>NA</td><td> 7</td><td>UG_P_L</td><td>TRUE</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>27056</td><td>1266-2-11 </td><td>Harekupvatnet   </td><td>2019-10-17</td><td>NA</td><td>NA</td><td>Aluminium, ikke labil</td><td>NA</td><td> 7</td><td>UG_P_L</td><td>TRUE</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A data.frame: 6 × 18\n",
-       "\\begin{tabular}{r|llllllllllllllllll}\n",
-       "  & ProjectId & ProjectName & StationId & StationCode & StationName & SampleDate & Depth2 & ParameterName & Flag & Value & Unit & Approved & QuantificationLimit & DetectionLimit & Laboratory & MethodCode & MethodRef & Remark\\\\\n",
-       "  & <int> & <chr> & <int> & <chr> & <chr> & <chr> & <dbl> & <chr> & <chr> & <dbl> & <chr> & <lgl> & <dbl> & <dbl> & <chr> & <chr> & <chr> & <chr>\\\\\n",
+       "A data.frame: 6 × 13\n",
+       "\\begin{tabular}{r|lllllllllllll}\n",
+       "  & ProjectId & ProjectName & StationId & StationCode & StationName & SampleDate & Depth1 & Depth2 & ParameterName & Flag & Value & Unit & Approved\\\\\n",
+       "  & <int> & <chr> & <int> & <chr> & <chr> & <dttm> & <dbl> & <dbl> & <chr> & <chr> & <dbl> & <chr> & <lgl>\\\\\n",
        "\\hline\n",
-       "\t1 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 71725 & 1432-2-205 & Femtevatnet      & 2019-10-02T00:00:00Z & NA & Aluminium, ikke labil & <  &  5 & UG\\_P\\_L & TRUE & 5 & 1.5 & NIVA\\_LABWARE & NA & E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009 & NA\\\\\n",
-       "\t2 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 71719 & 623-603    & Breidlivatnet    & 2019-10-28T00:00:00Z & NA & Aluminium, ikke labil & NA & 97 & UG\\_P\\_L & TRUE & 5 & 1.5 & NIVA\\_LABWARE & NA & E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009 & NA\\\\\n",
-       "\t3 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 45862 & 1037-19    & Fjotlandsvatnet  & 2019-10-30T00:00:00Z & NA & Aluminium, ikke labil & NA & 98 & UG\\_P\\_L & TRUE & 5 & 1.5 & NIVA\\_LABWARE & NA & E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009 & NA\\\\\n",
-       "\t4 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 37922 & 1622-1-5   & Nedre Hanstjørna & 2019-10-09T00:00:00Z & NA & Aluminium, ikke labil & NA & 84 & UG\\_P\\_L & TRUE & 5 & 1.5 & NIVA\\_LABWARE & NA & E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009 & NA\\\\\n",
-       "\t5 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 27063 & 1811-1-22  & HOH 674          & 2019-09-26T00:00:00Z & NA & Aluminium, ikke labil & NA &  7 & UG\\_P\\_L & TRUE & 5 & 1.5 & NIVA\\_LABWARE & NA & E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009 & NA\\\\\n",
-       "\t6 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 27056 & 1266-2-11  & Harekupvatnet    & 2019-10-17T00:00:00Z & NA & Aluminium, ikke labil & NA &  7 & UG\\_P\\_L & TRUE & 5 & 1.5 & NIVA\\_LABWARE & NA & E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009 & NA\\\\\n",
+       "\t1 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 71725 & 1432-2-205 & Femtevatnet      & 2019-10-02 & NA & NA & Aluminium, ikke labil & <  &  5 & UG\\_P\\_L & TRUE\\\\\n",
+       "\t2 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 71719 & 623-603    & Breidlivatnet    & 2019-10-28 & NA & NA & Aluminium, ikke labil & NA & 97 & UG\\_P\\_L & TRUE\\\\\n",
+       "\t3 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 45862 & 1037-19    & Fjotlandsvatnet  & 2019-10-30 & NA & NA & Aluminium, ikke labil & NA & 98 & UG\\_P\\_L & TRUE\\\\\n",
+       "\t4 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 37922 & 1622-1-5   & Nedre Hanstjørna & 2019-10-09 & NA & NA & Aluminium, ikke labil & NA & 84 & UG\\_P\\_L & TRUE\\\\\n",
+       "\t5 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 27063 & 1811-1-22  & HOH 674          & 2019-09-26 & NA & NA & Aluminium, ikke labil & NA &  7 & UG\\_P\\_L & TRUE\\\\\n",
+       "\t6 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 27056 & 1266-2-11  & Harekupvatnet    & 2019-10-17 & NA & NA & Aluminium, ikke labil & NA &  7 & UG\\_P\\_L & TRUE\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A data.frame: 6 × 18\n",
+       "A data.frame: 6 × 13\n",
        "\n",
-       "| <!--/--> | ProjectId &lt;int&gt; | ProjectName &lt;chr&gt; | StationId &lt;int&gt; | StationCode &lt;chr&gt; | StationName &lt;chr&gt; | SampleDate &lt;chr&gt; | Depth2 &lt;dbl&gt; | ParameterName &lt;chr&gt; | Flag &lt;chr&gt; | Value &lt;dbl&gt; | Unit &lt;chr&gt; | Approved &lt;lgl&gt; | QuantificationLimit &lt;dbl&gt; | DetectionLimit &lt;dbl&gt; | Laboratory &lt;chr&gt; | MethodCode &lt;chr&gt; | MethodRef &lt;chr&gt; | Remark &lt;chr&gt; |\n",
-       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "| 1 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 71725 | 1432-2-205 | Femtevatnet      | 2019-10-02T00:00:00Z | NA | Aluminium, ikke labil | &lt;  |  5 | UG_P_L | TRUE | 5 | 1.5 | NIVA_LABWARE | NA | E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009 | NA |\n",
-       "| 2 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 71719 | 623-603    | Breidlivatnet    | 2019-10-28T00:00:00Z | NA | Aluminium, ikke labil | NA | 97 | UG_P_L | TRUE | 5 | 1.5 | NIVA_LABWARE | NA | E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009 | NA |\n",
-       "| 3 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 45862 | 1037-19    | Fjotlandsvatnet  | 2019-10-30T00:00:00Z | NA | Aluminium, ikke labil | NA | 98 | UG_P_L | TRUE | 5 | 1.5 | NIVA_LABWARE | NA | E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009 | NA |\n",
-       "| 4 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 37922 | 1622-1-5   | Nedre Hanstjørna | 2019-10-09T00:00:00Z | NA | Aluminium, ikke labil | NA | 84 | UG_P_L | TRUE | 5 | 1.5 | NIVA_LABWARE | NA | E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009 | NA |\n",
-       "| 5 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 27063 | 1811-1-22  | HOH 674          | 2019-09-26T00:00:00Z | NA | Aluminium, ikke labil | NA |  7 | UG_P_L | TRUE | 5 | 1.5 | NIVA_LABWARE | NA | E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009 | NA |\n",
-       "| 6 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 27056 | 1266-2-11  | Harekupvatnet    | 2019-10-17T00:00:00Z | NA | Aluminium, ikke labil | NA |  7 | UG_P_L | TRUE | 5 | 1.5 | NIVA_LABWARE | NA | E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009 | NA |\n",
+       "| <!--/--> | ProjectId &lt;int&gt; | ProjectName &lt;chr&gt; | StationId &lt;int&gt; | StationCode &lt;chr&gt; | StationName &lt;chr&gt; | SampleDate &lt;dttm&gt; | Depth1 &lt;dbl&gt; | Depth2 &lt;dbl&gt; | ParameterName &lt;chr&gt; | Flag &lt;chr&gt; | Value &lt;dbl&gt; | Unit &lt;chr&gt; | Approved &lt;lgl&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| 1 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 71725 | 1432-2-205 | Femtevatnet      | 2019-10-02 | NA | NA | Aluminium, ikke labil | &lt;  |  5 | UG_P_L | TRUE |\n",
+       "| 2 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 71719 | 623-603    | Breidlivatnet    | 2019-10-28 | NA | NA | Aluminium, ikke labil | NA | 97 | UG_P_L | TRUE |\n",
+       "| 3 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 45862 | 1037-19    | Fjotlandsvatnet  | 2019-10-30 | NA | NA | Aluminium, ikke labil | NA | 98 | UG_P_L | TRUE |\n",
+       "| 4 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 37922 | 1622-1-5   | Nedre Hanstjørna | 2019-10-09 | NA | NA | Aluminium, ikke labil | NA | 84 | UG_P_L | TRUE |\n",
+       "| 5 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 27063 | 1811-1-22  | HOH 674          | 2019-09-26 | NA | NA | Aluminium, ikke labil | NA |  7 | UG_P_L | TRUE |\n",
+       "| 6 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 27056 | 1266-2-11  | Harekupvatnet    | 2019-10-17 | NA | NA | Aluminium, ikke labil | NA |  7 | UG_P_L | TRUE |\n",
        "\n"
       ],
       "text/plain": [
@@ -350,27 +350,20 @@
        "4 12433     Nasjonal Innsjøundersøkelse 2019 37922     1622-1-5   \n",
        "5 12433     Nasjonal Innsjøundersøkelse 2019 27063     1811-1-22  \n",
        "6 12433     Nasjonal Innsjøundersøkelse 2019 27056     1266-2-11  \n",
-       "  StationName      SampleDate           Depth2 ParameterName         Flag Value\n",
-       "1 Femtevatnet      2019-10-02T00:00:00Z NA     Aluminium, ikke labil <     5   \n",
-       "2 Breidlivatnet    2019-10-28T00:00:00Z NA     Aluminium, ikke labil NA   97   \n",
-       "3 Fjotlandsvatnet  2019-10-30T00:00:00Z NA     Aluminium, ikke labil NA   98   \n",
-       "4 Nedre Hanstjørna 2019-10-09T00:00:00Z NA     Aluminium, ikke labil NA   84   \n",
-       "5 HOH 674          2019-09-26T00:00:00Z NA     Aluminium, ikke labil NA    7   \n",
-       "6 Harekupvatnet    2019-10-17T00:00:00Z NA     Aluminium, ikke labil NA    7   \n",
-       "  Unit   Approved QuantificationLimit DetectionLimit Laboratory   MethodCode\n",
-       "1 UG_P_L TRUE     5                   1.5            NIVA_LABWARE NA        \n",
-       "2 UG_P_L TRUE     5                   1.5            NIVA_LABWARE NA        \n",
-       "3 UG_P_L TRUE     5                   1.5            NIVA_LABWARE NA        \n",
-       "4 UG_P_L TRUE     5                   1.5            NIVA_LABWARE NA        \n",
-       "5 UG_P_L TRUE     5                   1.5            NIVA_LABWARE NA        \n",
-       "6 UG_P_L TRUE     5                   1.5            NIVA_LABWARE NA        \n",
-       "  MethodRef                                   Remark\n",
-       "1 E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009 NA    \n",
-       "2 E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009 NA    \n",
-       "3 E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009 NA    \n",
-       "4 E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009 NA    \n",
-       "5 E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009 NA    \n",
-       "6 E3-2 - NS-EN ISO/IEC 17025:2005 NA TEST 009 NA    "
+       "  StationName      SampleDate Depth1 Depth2 ParameterName         Flag Value\n",
+       "1 Femtevatnet      2019-10-02 NA     NA     Aluminium, ikke labil <     5   \n",
+       "2 Breidlivatnet    2019-10-28 NA     NA     Aluminium, ikke labil NA   97   \n",
+       "3 Fjotlandsvatnet  2019-10-30 NA     NA     Aluminium, ikke labil NA   98   \n",
+       "4 Nedre Hanstjørna 2019-10-09 NA     NA     Aluminium, ikke labil NA   84   \n",
+       "5 HOH 674          2019-09-26 NA     NA     Aluminium, ikke labil NA    7   \n",
+       "6 Harekupvatnet    2019-10-17 NA     NA     Aluminium, ikke labil NA    7   \n",
+       "  Unit   Approved\n",
+       "1 UG_P_L TRUE    \n",
+       "2 UG_P_L TRUE    \n",
+       "3 UG_P_L TRUE    \n",
+       "4 UG_P_L TRUE    \n",
+       "5 UG_P_L TRUE    \n",
+       "6 UG_P_L TRUE    "
       ]
      },
      "metadata": {},
