Minor changes to get_json and post_json functions

--- a/examples/query_chem.ipynb
+++ b/examples/query_chem.ipynb
@@ -65,7 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1] \"1301 projects in the database.\"\n"
+      "[1] \"1302 projects in the database.\"\n"
      ]
     },
     {
@@ -208,6 +208,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1] \"Id\"         \"ProjectId\"  \"Code\"       \"Name\"       \"Type._Id\"  \n",
+      "[6] \"Type._Text\"\n",
+      "     Id ProjectId      Code              Name Type._Id Type._Text\n",
+      "1 26104     12433  1037-1-1 Lisle Frøysvatnet        1     Innsjø\n",
+      "2 26105     12433 1046-1-23       Bergetjørni        1     Innsjø\n",
+      "3 26106     12433 1114-1-20  Skjelbreidtjørni        1     Innsjø\n",
+      "4 26107     12433 1114-1-34        Lomstjørni        1     Innsjø\n",
+      "5 26108     12433  1122-1-9         Kråtjørni        1     Innsjø\n",
+      "6 26109     12433 1129-1-13       Tvaravatnet        1     Innsjø\n",
       "[1] \"1003 stations in project.\"\n"
      ]
     },
