Update example notebook

--- a/examples/query_chem.ipynb
+++ b/examples/query_chem.ipynb
@@ -6,10 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "source(\"../aquamonitR.R\")\n",
-    "\n",
-    "# The new functionality requires using the AM dev/test site\n",
-    "host <- \"https://test-aquamonitor.niva.no/\""
+    "library(\"aquamonitR\")"
    ]
   },
   {
@@ -62,11 +59,22 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"1302 projects in the database.\"\n"
-     ]
+     "data": {
+      "text/html": [
+       "'1302 projects in the database.'"
+      ],
+      "text/latex": [
+       "'1302 projects in the database.'"
+      ],
+      "text/markdown": [
+       "'1302 projects in the database.'"
+      ],
+      "text/plain": [
+       "[1] \"1302 projects in the database.\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -131,7 +139,7 @@
    ],
    "source": [
     "proj_df <- get_projects(token = token)\n",
-    "print(paste(nrow(proj_df), \"projects in the database.\", sep = \" \"))\n",
+    "paste0(nrow(proj_df), \" projects in the database.\")\n",
     "head(proj_df)"
    ]
   },
@@ -205,20 +213,22 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1] \"Id\"         \"ProjectId\"  \"Code\"       \"Name\"       \"Type._Id\"  \n",
-      "[6] \"Type._Text\"\n",
-      "     Id ProjectId      Code              Name Type._Id Type._Text\n",
-      "1 26104     12433  1037-1-1 Lisle Frøysvatnet        1     Innsjø\n",
-      "2 26105     12433 1046-1-23       Bergetjørni        1     Innsjø\n",
-      "3 26106     12433 1114-1-20  Skjelbreidtjørni        1     Innsjø\n",
-      "4 26107     12433 1114-1-34        Lomstjørni        1     Innsjø\n",
-      "5 26108     12433  1122-1-9         Kråtjørni        1     Innsjø\n",
-      "6 26109     12433 1129-1-13       Tvaravatnet        1     Innsjø\n",
-      "[1] \"1003 stations in project.\"\n"
-     ]
+     "data": {
+      "text/html": [
+       "'1003 stations in project.'"
+      ],
+      "text/latex": [
+       "'1003 stations in project.'"
+      ],
+      "text/markdown": [
+       "'1003 stations in project.'"
+      ],
+      "text/plain": [
+       "[1] \"1003 stations in project.\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -286,7 +296,7 @@
     "proj_id <- 12433\n",
     "\n",
     "stn_df <- get_project_stations(proj_id, token = token)\n",
-    "print(paste(nrow(stn_df), \"stations in project.\", sep = \" \"))\n",
+    "paste0(nrow(stn_df), \" stations in project.\")\n",
     "head(stn_df)"
    ]
   },
@@ -314,12 +324,12 @@
        "\t<tr><th></th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dttm&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>1</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>71716</td><td>128-2-200</td><td>Langevatnet</td><td>2019-10-25</td><td>0</td><td>0</td><td>Cl       </td><td>NA</td><td>  4.140</td><td>mg/L</td></tr>\n",
-       "\t<tr><th scope=row>2</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>71716</td><td>128-2-200</td><td>Langevatnet</td><td>2019-10-25</td><td>0</td><td>0</td><td>Cd       </td><td>NA</td><td>  0.039</td><td>µg/l</td></tr>\n",
-       "\t<tr><th scope=row>3</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>71716</td><td>128-2-200</td><td>Langevatnet</td><td>2019-10-25</td><td>0</td><td>0</td><td>Fe       </td><td>NA</td><td>830.000</td><td>µg/l</td></tr>\n",
-       "\t<tr><th scope=row>4</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>71716</td><td>128-2-200</td><td>Langevatnet</td><td>2019-10-25</td><td>0</td><td>0</td><td>Mn       </td><td>NA</td><td> 19.000</td><td>µg/l</td></tr>\n",
-       "\t<tr><th scope=row>5</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>71716</td><td>128-2-200</td><td>Langevatnet</td><td>2019-10-25</td><td>0</td><td>0</td><td>Co       </td><td>NA</td><td>  0.760</td><td>µg/L</td></tr>\n",
-       "\t<tr><th scope=row>6</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>71716</td><td>128-2-200</td><td>Langevatnet</td><td>2019-10-25</td><td>0</td><td>0</td><td>NO3+NO2-N</td><td>NA</td><td> 46.000</td><td>µg/l</td></tr>\n",
+       "\t<tr><th scope=row>1</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>26070</td><td>221-1-2</td><td>Langtjern</td><td>2019-10-25</td><td>0</td><td>0</td><td>pH   </td><td>NA</td><td>  5.09</td><td>NA     </td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>26070</td><td>221-1-2</td><td>Langtjern</td><td>2019-10-25</td><td>0</td><td>0</td><td>Farge</td><td>NA</td><td>211.00</td><td>mg Pt/l</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>26070</td><td>221-1-2</td><td>Langtjern</td><td>2019-10-25</td><td>0</td><td>0</td><td>Co   </td><td>NA</td><td>  0.24</td><td>µg/L   </td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>26070</td><td>221-1-2</td><td>Langtjern</td><td>2019-10-25</td><td>0</td><td>0</td><td>Al/R </td><td>NA</td><td>150.00</td><td>µg/l   </td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>26071</td><td>101-2-7</td><td>Hokksjøen</td><td>2019-10-25</td><td>0</td><td>0</td><td>pH   </td><td>NA</td><td>  4.67</td><td>NA     </td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>12433</td><td>Nasjonal Innsjøundersøkelse 2019</td><td>26071</td><td>101-2-7</td><td>Hokksjøen</td><td>2019-10-25</td><td>0</td><td>0</td><td>Al/R </td><td>NA</td><td>280.00</td><td>µg/l   </td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -329,12 +339,12 @@
        "  & ProjectId & ProjectName & StationId & StationCode & StationName & SampleDate & Depth1 & Depth2 & ParameterName & Flag & Value & Unit\\\\\n",
        "  & <int> & <chr> & <int> & <chr> & <chr> & <dttm> & <dbl> & <dbl> & <chr> & <chr> & <dbl> & <chr>\\\\\n",
        "\\hline\n",
-       "\t1 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 71716 & 128-2-200 & Langevatnet & 2019-10-25 & 0 & 0 & Cl        & NA &   4.140 & mg/L\\\\\n",
-       "\t2 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 71716 & 128-2-200 & Langevatnet & 2019-10-25 & 0 & 0 & Cd        & NA &   0.039 & µg/l\\\\\n",
-       "\t3 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 71716 & 128-2-200 & Langevatnet & 2019-10-25 & 0 & 0 & Fe        & NA & 830.000 & µg/l\\\\\n",
-       "\t4 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 71716 & 128-2-200 & Langevatnet & 2019-10-25 & 0 & 0 & Mn        & NA &  19.000 & µg/l\\\\\n",
-       "\t5 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 71716 & 128-2-200 & Langevatnet & 2019-10-25 & 0 & 0 & Co        & NA &   0.760 & µg/L\\\\\n",
-       "\t6 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 71716 & 128-2-200 & Langevatnet & 2019-10-25 & 0 & 0 & NO3+NO2-N & NA &  46.000 & µg/l\\\\\n",
+       "\t1 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 26070 & 221-1-2 & Langtjern & 2019-10-25 & 0 & 0 & pH    & NA &   5.09 & NA     \\\\\n",
+       "\t2 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 26070 & 221-1-2 & Langtjern & 2019-10-25 & 0 & 0 & Farge & NA & 211.00 & mg Pt/l\\\\\n",
+       "\t3 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 26070 & 221-1-2 & Langtjern & 2019-10-25 & 0 & 0 & Co    & NA &   0.24 & µg/L   \\\\\n",
+       "\t4 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 26070 & 221-1-2 & Langtjern & 2019-10-25 & 0 & 0 & Al/R  & NA & 150.00 & µg/l   \\\\\n",
+       "\t5 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 26071 & 101-2-7 & Hokksjøen & 2019-10-25 & 0 & 0 & pH    & NA &   4.67 & NA     \\\\\n",
+       "\t6 & 12433 & Nasjonal Innsjøundersøkelse 2019 & 26071 & 101-2-7 & Hokksjøen & 2019-10-25 & 0 & 0 & Al/R  & NA & 280.00 & µg/l   \\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -343,29 +353,29 @@
        "\n",
        "| <!--/--> | ProjectId &lt;int&gt; | ProjectName &lt;chr&gt; | StationId &lt;int&gt; | StationCode &lt;chr&gt; | StationName &lt;chr&gt; | SampleDate &lt;dttm&gt; | Depth1 &lt;dbl&gt; | Depth2 &lt;dbl&gt; | ParameterName &lt;chr&gt; | Flag &lt;chr&gt; | Value &lt;dbl&gt; | Unit &lt;chr&gt; |\n",
        "|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
-       "| 1 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 71716 | 128-2-200 | Langevatnet | 2019-10-25 | 0 | 0 | Cl        | NA |   4.140 | mg/L |\n",
-       "| 2 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 71716 | 128-2-200 | Langevatnet | 2019-10-25 | 0 | 0 | Cd        | NA |   0.039 | µg/l |\n",
-       "| 3 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 71716 | 128-2-200 | Langevatnet | 2019-10-25 | 0 | 0 | Fe        | NA | 830.000 | µg/l |\n",
-       "| 4 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 71716 | 128-2-200 | Langevatnet | 2019-10-25 | 0 | 0 | Mn        | NA |  19.000 | µg/l |\n",
-       "| 5 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 71716 | 128-2-200 | Langevatnet | 2019-10-25 | 0 | 0 | Co        | NA |   0.760 | µg/L |\n",
-       "| 6 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 71716 | 128-2-200 | Langevatnet | 2019-10-25 | 0 | 0 | NO3+NO2-N | NA |  46.000 | µg/l |\n",
+       "| 1 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 26070 | 221-1-2 | Langtjern | 2019-10-25 | 0 | 0 | pH    | NA |   5.09 | NA      |\n",
+       "| 2 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 26070 | 221-1-2 | Langtjern | 2019-10-25 | 0 | 0 | Farge | NA | 211.00 | mg Pt/l |\n",
+       "| 3 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 26070 | 221-1-2 | Langtjern | 2019-10-25 | 0 | 0 | Co    | NA |   0.24 | µg/L    |\n",
+       "| 4 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 26070 | 221-1-2 | Langtjern | 2019-10-25 | 0 | 0 | Al/R  | NA | 150.00 | µg/l    |\n",
+       "| 5 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 26071 | 101-2-7 | Hokksjøen | 2019-10-25 | 0 | 0 | pH    | NA |   4.67 | NA      |\n",
+       "| 6 | 12433 | Nasjonal Innsjøundersøkelse 2019 | 26071 | 101-2-7 | Hokksjøen | 2019-10-25 | 0 | 0 | Al/R  | NA | 280.00 | µg/l    |\n",
        "\n"
       ],
       "text/plain": [
        "  ProjectId ProjectName                      StationId StationCode StationName\n",
-       "1 12433     Nasjonal Innsjøundersøkelse 2019 71716     128-2-200   Langevatnet\n",
-       "2 12433     Nasjonal Innsjøundersøkelse 2019 71716     128-2-200   Langevatnet\n",
-       "3 12433     Nasjonal Innsjøundersøkelse 2019 71716     128-2-200   Langevatnet\n",
-       "4 12433     Nasjonal Innsjøundersøkelse 2019 71716     128-2-200   Langevatnet\n",
-       "5 12433     Nasjonal Innsjøundersøkelse 2019 71716     128-2-200   Langevatnet\n",
-       "6 12433     Nasjonal Innsjøundersøkelse 2019 71716     128-2-200   Langevatnet\n",
-       "  SampleDate Depth1 Depth2 ParameterName Flag Value   Unit\n",
-       "1 2019-10-25 0      0      Cl            NA     4.140 mg/L\n",
-       "2 2019-10-25 0      0      Cd            NA     0.039 µg/l\n",
-       "3 2019-10-25 0      0      Fe            NA   830.000 µg/l\n",
-       "4 2019-10-25 0      0      Mn            NA    19.000 µg/l\n",
-       "5 2019-10-25 0      0      Co            NA     0.760 µg/L\n",
-       "6 2019-10-25 0      0      NO3+NO2-N     NA    46.000 µg/l"
+       "1 12433     Nasjonal Innsjøundersøkelse 2019 26070     221-1-2     Langtjern  \n",
+       "2 12433     Nasjonal Innsjøundersøkelse 2019 26070     221-1-2     Langtjern  \n",
+       "3 12433     Nasjonal Innsjøundersøkelse 2019 26070     221-1-2     Langtjern  \n",
+       "4 12433     Nasjonal Innsjøundersøkelse 2019 26070     221-1-2     Langtjern  \n",
+       "5 12433     Nasjonal Innsjøundersøkelse 2019 26071     101-2-7     Hokksjøen  \n",
+       "6 12433     Nasjonal Innsjøundersøkelse 2019 26071     101-2-7     Hokksjøen  \n",
+       "  SampleDate Depth1 Depth2 ParameterName Flag Value  Unit   \n",
+       "1 2019-10-25 0      0      pH            NA     5.09 NA     \n",
+       "2 2019-10-25 0      0      Farge         NA   211.00 mg Pt/l\n",
+       "3 2019-10-25 0      0      Co            NA     0.24 µg/L   \n",
+       "4 2019-10-25 0      0      Al/R          NA   150.00 µg/l   \n",
+       "5 2019-10-25 0      0      pH            NA     4.67 NA     \n",
+       "6 2019-10-25 0      0      Al/R          NA   280.00 µg/l   "
       ]
      },
      "metadata": {},
