--- a/examples/query_chem.ipynb
+++ b/examples/query_chem.ipynb
@@ -6,7 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "library(\"aquamonitR\")"
+    "library(\"aquamonitR\")\n",
+    "\n",
+    "# aquamonitR currently requires the AquaMonitor test/dev site\n",
+    "host <- \"https://test-aquamonitor.niva.no/\""
    ]
   },
   {
