Update to reflect change in AM endpoint URL

--- a/examples/query_chem.ipynb
+++ b/examples/query_chem.ipynb
@@ -37,8 +37,8 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Username:  ···\n",
-      "Password:  ··············\n"
+      "Username: ···\n",
+      "Password: ··············\n"
      ]
     }
    ],
@@ -64,16 +64,16 @@
     {
      "data": {
       "text/html": [
-       "'1302 projects in the database.'"
+       "'1307 projects in the database.'"
       ],
       "text/latex": [
-       "'1302 projects in the database.'"
+       "'1307 projects in the database.'"
       ],
       "text/markdown": [
-       "'1302 projects in the database.'"
+       "'1307 projects in the database.'"
       ],
       "text/plain": [
-       "[1] \"1302 projects in the database.\""
+       "[1] \"1307 projects in the database.\""
       ]
      },
      "metadata": {},
@@ -243,12 +243,12 @@
        "\t<tr><th></th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>1</th><td>12433</td><td>26104</td><td>1037-1-1 </td><td>Lisle Frøysvatnet</td><td>Innsjø</td></tr>\n",
-       "\t<tr><th scope=row>2</th><td>12433</td><td>26105</td><td>1046-1-23</td><td>Bergetjørni      </td><td>Innsjø</td></tr>\n",
-       "\t<tr><th scope=row>3</th><td>12433</td><td>26106</td><td>1114-1-20</td><td>Skjelbreidtjørni </td><td>Innsjø</td></tr>\n",
-       "\t<tr><th scope=row>4</th><td>12433</td><td>26107</td><td>1114-1-34</td><td>Lomstjørni       </td><td>Innsjø</td></tr>\n",
-       "\t<tr><th scope=row>5</th><td>12433</td><td>26108</td><td>1122-1-9 </td><td>Kråtjørni        </td><td>Innsjø</td></tr>\n",
-       "\t<tr><th scope=row>6</th><td>12433</td><td>26109</td><td>1129-1-13</td><td>Tvaravatnet      </td><td>Innsjø</td></tr>\n",
+       "\t<tr><th scope=row>1</th><td>12433</td><td>45532</td><td>817-607   </td><td>Måvatn         </td><td>Innsjø</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>12433</td><td>45862</td><td>1037-19   </td><td>Fjotlandsvatnet</td><td>Innsjø</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>12433</td><td>71725</td><td>1432-2-205</td><td>Femtevatnet    </td><td>Innsjø</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>12433</td><td>71723</td><td>938-3-203 </td><td>Gyvatn         </td><td>Innsjø</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>12433</td><td>71719</td><td>623-603   </td><td>Breidlivatnet  </td><td>Innsjø</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>12433</td><td>71862</td><td>1001-2-204</td><td>Vassvann       </td><td>Innsjø</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -258,12 +258,12 @@
        "  & ProjectId & StationId & StationCode & StationName & Type\\\\\n",
        "  & <int> & <int> & <chr> & <chr> & <chr>\\\\\n",
        "\\hline\n",
-       "\t1 & 12433 & 26104 & 1037-1-1  & Lisle Frøysvatnet & Innsjø\\\\\n",
-       "\t2 & 12433 & 26105 & 1046-1-23 & Bergetjørni       & Innsjø\\\\\n",
-       "\t3 & 12433 & 26106 & 1114-1-20 & Skjelbreidtjørni  & Innsjø\\\\\n",
-       "\t4 & 12433 & 26107 & 1114-1-34 & Lomstjørni        & Innsjø\\\\\n",
-       "\t5 & 12433 & 26108 & 1122-1-9  & Kråtjørni         & Innsjø\\\\\n",
-       "\t6 & 12433 & 26109 & 1129-1-13 & Tvaravatnet       & Innsjø\\\\\n",
+       "\t1 & 12433 & 45532 & 817-607    & Måvatn          & Innsjø\\\\\n",
+       "\t2 & 12433 & 45862 & 1037-19    & Fjotlandsvatnet & Innsjø\\\\\n",
+       "\t3 & 12433 & 71725 & 1432-2-205 & Femtevatnet     & Innsjø\\\\\n",
+       "\t4 & 12433 & 71723 & 938-3-203  & Gyvatn          & Innsjø\\\\\n",
+       "\t5 & 12433 & 71719 & 623-603    & Breidlivatnet   & Innsjø\\\\\n",
+       "\t6 & 12433 & 71862 & 1001-2-204 & Vassvann        & Innsjø\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -272,22 +272,22 @@
        "\n",
        "| <!--/--> | ProjectId &lt;int&gt; | StationId &lt;int&gt; | StationCode &lt;chr&gt; | StationName &lt;chr&gt; | Type &lt;chr&gt; |\n",
        "|---|---|---|---|---|---|\n",
-       "| 1 | 12433 | 26104 | 1037-1-1  | Lisle Frøysvatnet | Innsjø |\n",
-       "| 2 | 12433 | 26105 | 1046-1-23 | Bergetjørni       | Innsjø |\n",
-       "| 3 | 12433 | 26106 | 1114-1-20 | Skjelbreidtjørni  | Innsjø |\n",
-       "| 4 | 12433 | 26107 | 1114-1-34 | Lomstjørni        | Innsjø |\n",
-       "| 5 | 12433 | 26108 | 1122-1-9  | Kråtjørni         | Innsjø |\n",
-       "| 6 | 12433 | 26109 | 1129-1-13 | Tvaravatnet       | Innsjø |\n",
+       "| 1 | 12433 | 45532 | 817-607    | Måvatn          | Innsjø |\n",
+       "| 2 | 12433 | 45862 | 1037-19    | Fjotlandsvatnet | Innsjø |\n",
+       "| 3 | 12433 | 71725 | 1432-2-205 | Femtevatnet     | Innsjø |\n",
+       "| 4 | 12433 | 71723 | 938-3-203  | Gyvatn          | Innsjø |\n",
+       "| 5 | 12433 | 71719 | 623-603    | Breidlivatnet   | Innsjø |\n",
+       "| 6 | 12433 | 71862 | 1001-2-204 | Vassvann        | Innsjø |\n",
        "\n"
       ],
       "text/plain": [
-       "  ProjectId StationId StationCode StationName       Type  \n",
-       "1 12433     26104     1037-1-1    Lisle Frøysvatnet Innsjø\n",
-       "2 12433     26105     1046-1-23   Bergetjørni       Innsjø\n",
-       "3 12433     26106     1114-1-20   Skjelbreidtjørni  Innsjø\n",
-       "4 12433     26107     1114-1-34   Lomstjørni        Innsjø\n",
-       "5 12433     26108     1122-1-9    Kråtjørni         Innsjø\n",
-       "6 12433     26109     1129-1-13   Tvaravatnet       Innsjø"
+       "  ProjectId StationId StationCode StationName     Type  \n",
+       "1 12433     45532     817-607     Måvatn          Innsjø\n",
+       "2 12433     45862     1037-19     Fjotlandsvatnet Innsjø\n",
+       "3 12433     71725     1432-2-205  Femtevatnet     Innsjø\n",
+       "4 12433     71723     938-3-203   Gyvatn          Innsjø\n",
+       "5 12433     71719     623-603     Breidlivatnet   Innsjø\n",
+       "6 12433     71862     1001-2-204  Vassvann        Innsjø"
       ]
      },
      "metadata": {},
